@@ -636,7 +636,6 @@ void TWEB::cntrCmdProc( XMLNode *opt )
 			    "  0   - disable;\n"
 			    "  1-9 - direct level."));
 	}
-	ctrMkNode("fld",opt,-1,"/help/g_help",_("Options help"),R_R___,"root",SUI_ID,2,"tp","str","rows","5");
 	return;
     }
 
@@ -657,7 +656,6 @@ void TWEB::cntrCmdProc( XMLNode *opt )
 	if(ctrChkNode(opt,"get",RWRWR_,"root",SUI_ID,SEC_RD))	opt->setText(TSYS::int2str(PNGCompLev()));
 	if(ctrChkNode(opt,"set",RWRWR_,"root",SUI_ID,SEC_WR))	setPNGCompLev(atoi(opt->text().c_str()));
     }
-    else if(a_path == "/help/g_help" && ctrChkNode(opt,"get",R_R___,"root",SUI_ID)) opt->setText(optDescr());
     else TUI::cntrCmdProc(opt);
 }
 
